--- a/src/components/Products/ProductList.scss
+++ b/src/components/Products/ProductList.scss
@@ -1,36 +1,36 @@
-.items {
-  margin: 0 auto;
-  max-width: 1200px;
+.product-items {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 @media (max-width: 900px) {
-  .items {
+  .product-items {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 @media (max-width: 700px) {
-  .items {
+  .product-items {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-.item {
-  flex: 1;
-  width: 100%;
-  box-sizing: border-box;
-  height: fit-content;
-  position: relative;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
+.product-item {
   align-items: space-between;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: fit-content;
+  padding: 1rem;
+  position: relative;
+  width: 100%;
   img {
     width: 100%;
   }
-  .item-no {
+  .product-item-no {
     font-size: 3rem;
   }
   .product-name {
@@ -38,11 +38,11 @@
   }
 }
 
-.item-content {
-  width: 95%;
+.product-item-content {
   transform: translateX(5%);
+  width: 95%;
 }
 
-.no {
+.product-no {
   font-size: 1rem;
 }
