--- a/src/containers/Cart/Cart.scss
+++ b/src/containers/Cart/Cart.scss
@@ -1,55 +1,78 @@
 #cart {
-  padding: 0 1rem;
+  background: #fff;
   box-sizing: border-box;
-  max-width: 1000px;
-  margin: 0 auto;
-  position: relative;
-}
-
-.cart-container {
-  margin: 0 auto;
-}
-
-.proceed-btn-container {
+  display: flex;
+  flex-direction: column;
+  font-family: var(--primary-sans-serif);
+  height: 100vh;
+  padding: 1rem;
   position: fixed;
-  background: pink;
-  bottom: 0;
+  right: 0;
+  top: 0;
   width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-  > * {
-    position: relative;
+  z-index: 1000;
+  h2 {
+    color: #333;
+    font-family: var(--primary-serif);
+    font-size: 2.5rem;
+    margin: 0;
+    text-align: center;
   }
 }
-.proceed-btn {
-  position: absolute;
-  bottom: 1rem;
-  right: 2rem;
-  background: #efefef;
-  color: #333;
-  padding: 1rem;
-  border: none;
-  font-weight: bold;
-  box-shadow: 2px 2px 10px #000;
-}
-
-.new-order-form {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
+.cart-title {
   align-items: center;
-  z-index: 700;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.overlay {
-  position: fixed;
-  background: rgba(0, 0, 0, 0.5);
+.cart-button-container {
+  align-items: center;
+  background: var(--primary-light);
+  display: flex;
+  height: 75px;
+  justify-content: center;
   width: 100%;
+}
+
+.cart-button {
+  background: var(--primary-dark);
+  border: none;
+  color: var(--primary-light);
+  display: block;
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 1rem;
+  &:disabled,
+  &[disabled] {
+    background-color: #cccccc;
+    color: #666666;
+  }
+}
+.cart-overlay {
+  background: rgba(0, 0, 0, 0.5);
+  display: block;
   height: 100vh;
+  position: fixed;
+  right: 320px;
   top: 0;
-  left: 0;
+  width: 100vw;
+  z-index: 900;
+}
+#dummy-cart {
+  background: var(--primary-light);
+  display: block;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 320px;
+  z-index: 1000;
+}
+
+.exit-btn,
+.return-btn {
+  background: none;
+  border: none;
 }
