--- a/src/containers/ProductInfo/ProductInfo.scss
+++ b/src/containers/ProductInfo/ProductInfo.scss
@@ -1,152 +1,144 @@
 #test-page {
-  width: 100%;
-  min-height: fit-content;
+  align-items: center;
+  color: var(--primary-light);
   display: flex;
   justify-content: center;
-  align-items: center;
   margin-top: 55px;
-  color: #fff;
+  min-height: fit-content;
+  width: 100%;
   .test-item {
-    display: flex;
     align-items: center;
-    padding: 1rem;
     box-sizing: border-box;
+    display: flex;
+    padding: 1rem;
   }
   p {
+    font-family: var(--primary-serif);
     line-height: 24px;
-    font-family: Garamond;
   }
   .test-box {
-    width: 25vw;
-    height: 25vw;
-    min-width: 300px;
-    min-height: 300px;
-    max-width: 440px;
-    max-height: 440px;
-    background: #333;
-    border: 1px solid #fff;
-    flex: 2;
-    transform: translateX(1.9rem);
-    z-index: 100;
-    position: relative;
-    padding: 1rem;
+    background: var(--primary-dark);
+    border: 1px solid var(--primary-light);
     box-sizing: border-box;
+    flex: 2;
+    height: 25vw;
+    max-height: 440px;
+    max-width: 440px;
+    padding: 1rem;
+    position: relative;
+    transform: translateX(1.9rem);
+    width: 25vw;
+    z-index: 100;
   }
   .add-to-cart {
     font-size: 1rem;
   }
   .test-text-content {
+    color: var(--primary-light);
     padding: 1rem;
-    color: #efefef;
   }
   .price {
-    font-size: 2rem;
     float: right;
+    font-size: 1rem;
   }
   .content {
-    position: absolute;
-    top: 0;
-    left: 0;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100%;
+    justify-content: space-between;
+    left: 0;
     padding: 1rem;
-    box-sizing: border-box;
+    position: absolute;
+    top: 0;
   }
   h1 {
-    margin: 0;
     font-size: 2rem;
+    margin: 0;
   }
   .test-no {
     display: block;
     font-size: 6rem;
-    transform: translate(-46px, -7rem);
-    // color: #93a69a;
     position: absolute;
+    transform: translate(-46px, -7rem);
   }
   .no {
     font-size: 2vw;
   }
-
-  button {
-    background: none;
-    color: #fff;
-    background: #333;
-    border: 1px solid #fff;
-  }
-
   .add-to-cart-btn {
-    display: block;
-    margin: 0 auto;
-    font-size: 2rem;
-    padding: 1rem;
-    transform: translateY(2rem) translateX(-50%);
-    // background: #93a69a;
-    position: absolute;
+    background: var(--primary-light);
+    border: none;
     bottom: 0;
+    color: var(--primary-dark);
+    display: block;
+    font-size: 1rem;
+    font-weight: bold;
     left: 50%;
+    margin: 0 auto;
+    padding: 1rem;
+    position: absolute;
+    transform: translateY(2rem) translateX(-50%);
+    &:focus {
+      background-color: var(--primary-highlight);
+      outline: none;
+    }
   }
-
   footer {
-    width: 100%;
     height: 50vh;
-    background: red;
+    width: 100%;
   }
-
   img {
     flex: 1;
-    width: 45vw;
     max-width: 400px;
+    width: 45vw;
   }
 }
 
-@media (max-width: 570px) {
+@media (max-width: 650px) {
   #test-page {
     display: block;
-    margin-top: 0;
-    .add-to-cart-btn {
-      position: relative;
-      margin: 1rem auto;
-      transform: none;
-      left: auto;
-    }
+    margin-top: auto;
     .test-item {
-      display: grid;
-      grid-template-columns: 1fr;
-      padding: 0;
-    }
-    .test-box {
-      width: 80%;
-      max-width: 100%;
-      margin: 0 auto;
-      order: 2;
-      transform: none;
-      border: none;
-      background: none;
-      height: auto;
-    }
-    .image-container {
+      display: flex;
+      flex-direction: column-reverse;
       position: relative;
-      overflow: hidden;
       width: 100%;
-      padding: 1rem;
-      box-sizing: border-box;
-      margin: 0;
-    }
-    img {
-      width: fit-content;
-      margin: 0 auto;
-      display: block;
-      width: 100%;
-    }
-    .test-no {
-      transform: none;
-      position: relative;
     }
     .content {
+      padding: 0;
       position: relative;
+    }
+    .test-box {
+      background: none;
+      border: none;
       box-sizing: border-box;
+      height: auto;
+      padding: 1rem;
+      position: relative;
+      transform: translateX(0);
+      width: 100%;
+      z-index: 100;
+    }
+    .test-no {
+      display: block;
+      font-size: 4rem;
+      position: relative;
+      transform: translate(0);
+    }
+    .no {
+      font-size: 1rem;
+    }
+    .add-to-cart-btn {
+      bottom: 0;
+      display: block;
+      left: 0;
+      margin: 0;
+      padding: 1rem;
+      position: relative;
+      transform: none;
+    }
+    img {
+      width: 100%;
     }
   }
 }
