--- a/src/containers/TheCompleteCoat/TheCompleteCoat.scss
+++ b/src/containers/TheCompleteCoat/TheCompleteCoat.scss
@@ -1,97 +1,70 @@
 #the-complete-coat {
   height: calc(100vh - 70px);
-  width: 100%;
   position: relative;
+  width: 100%;
   .content {
-    max-width: 900px;
-    margin: 0 auto;
-    display: flex;
     align-items: center;
+    display: flex;
     height: 100%;
+    margin: 0 auto;
+    max-width: 900px;
+    padding: 1rem;
     p {
+      box-sizing: border-box;
       font-size: 1.1rem;
       line-height: 2.5rem;
-      width: 100%;
       padding: 1rem;
-      box-sizing: border-box;
+      width: 100%;
     }
   }
 
   .wrapper {
-    position: relative;
-    padding: 15px;
     color: rgba(black, 0.5);
-    font-size: small;
     display: inline-block;
+    font-size: small;
+    padding: 15px;
+    position: relative;
     h1 {
-      text-align: center;
-      margin: 0;
-
-      font-size: 40vh;
-      line-height: 35vh;
+      background-clip: text;
       background-color: #ae8484;
       background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h16v2h-6v6h6v8H8v-6H2v6H0V0zm4 4h2v2H4V4zm8 8h2v2h-2v-2zm-8 0h2v2H4v-2zm8-8h2v2h-2V4z' fill='%23700000' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-      background-repeat: repeat;
-      background-clip: text;
       background-position: center;
-      -webkit-text-fill-color: transparent;
+      background-repeat: repeat;
+      font-size: 15rem;
       font-weight: bold;
+      line-height: 15rem;
+      margin: 0;
+      opacity: 0.3;
+      text-align: center;
       text-transform: uppercase;
       -webkit-font-smoothing: antialiased;
-      opacity: 0.3;
+      -webkit-text-fill-color: transparent;
     }
     h3 {
-      font-size: 1rem;
-      color: white;
-      letter-spacing: 3px;
-      text-align: center;
-      position: absolute;
       bottom: 0;
+      color: white;
+      font-size: 1rem;
       left: 0;
+      letter-spacing: 3px;
       margin-left: -30px;
-
+      position: absolute;
+      text-align: center;
       transform: rotate(270deg);
       transform-origin: 0 0;
     }
   }
 }
 
-@media (max-width: 980px) {
+@media (max-width: 800px) {
   #the-complete-coat {
+    align-items: center;
     display: flex;
     justify-content: center;
-    align-items: center;
     .content {
       display: block;
-      max-width: 900px;
-      margin: 0 auto;
       height: auto;
-      box-sizing: border-box;
-      p {
-        font-size: 1rem;
-        line-height: 2rem;
-      }
-    }
-    .wrapper {
-      display: block;
-      max-width: fit-content;
-      margin: 0 auto;
-      h1 {
-        font-size: 13rem;
-        line-height: 13rem;
-      }
-      h3 {
-        font-size: calc(100vw / 50);
-        color: white;
-        letter-spacing: 3px;
-        text-align: center;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin-left: -20px;
-        transform: rotate(270deg);
-        transform-origin: 0 0;
-      }
+      max-width: 600px;
+      padding: 0;
     }
   }
 }
