fix single item responsive

--- a/src/components/UI/Nav/NavMobile/NavMobile.scss
+++ b/src/components/UI/Nav/NavMobile/NavMobile.scss
@@ -1,5 +1,6 @@
 .navMobile-btns {
   align-items: center;
+  background: var(--primary-dark);
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
